<resources>
    <string name="app_name">CatDog</string>

    <string name="user">User</string>
    <string name="logo">logo</string>
    <string name="userAcces">Email</string>
    <string name="passwordAcess">Senha</string>
    <string name="login">ACCESAR CONTA</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="Senha">Senha</string>
    <string name="sex">Sexo</string>
    <string name="forgot_pass">Criar conta</string>
    <string name="ok">OK</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="TitleProdCan">Ração Canina</string>
    <string name="carrinho">Carrinho</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="pedidos">Pedidos</string>
    <string name="logout">Sair</string>
    <string name="cpf">Cpf</string>
    <string name="Rg">Rg</string>
    <string name="Cep">Cep</string>
    <string name="Clientes">Clientes</string>
    <string name="Produtos">Produtos</string>
    <string name="Estoque">Estoque</string>
    <string name="title_activity_clientes">ClientesActivity</string>
    <string name="bt_mais">+</string>
    <string name="error_user_login">Usuário ou senha invalida</string>
    <string name="error_invalid_email">Digite um email válido</string>
    <string name="error_empty_password">Precisa digitar uma senha válida</string>
    <string name="error_empty_email">Precisa digitar seu login</string>
    <string name="error_empty_user_name">Precisa preencher seu nome</string>
    <string name="title_create_account">Criar Conta</string>
    <string name="title_member_already">Já tem conta? Entrar</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="account_created_successfully">Conta criada com sucesso!</string>
    <string name="title_comprar">Comprar</string>
    <string name="error_empty_shopping_cart">Você ainda não tem itens no seu carrinho</string>
    <string name="title_continue_shopping">Continuar Comprando</string>
    <string name="title_finish_purchases">Concluir compras</string>
    <string name="title_thanks_purchases">Obrigado, em breve recebera mais informações sobre sua compra</string>
</resources>
