<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group>
        <item
            android:id="@+id/nav_item_account"
            android:icon="@drawable/ic_usuario"
            android:title="@string/minha_conta" />

        <item
            android:id="@+id/nav_item_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/carrinho" />

        <item
            android:id="@+id/nav_item_orders"
            android:icon="@drawable/ic_pedidos"
            android:title="@string/pedidos" />

        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_sair"
            android:title="@string/logout" />
    </group>

</menu>